Home: Changing skills percentages and adding new text. - Project: Fix animation on mobile and syntaxt warning.

--- a/src/components/Project/project.module.css
+++ b/src/components/Project/project.module.css
@@ -11,15 +11,7 @@
 
     transition: all .2s;
 }
-.projectImageWrapper{
-    transition: all .2s;
-}
-.projectImageWrapper:hover{
-    margin-top: 54px!important;
-}
-.projectImage:hover{
-    max-height: 380px;
-}
+
 .projectLink{
     transition: all .5s;
     position: relative;
